--- a/Projects/Random Quote Generator/index.html
+++ b/Projects/Random Quote Generator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="../../assets/js-logo-3D.png">
 </head>
 <body>
     <div id="quote-container">
